feat(recommend): filter unavailable CF recommendations
Filter regular CF candidates before truncating the final recommendation pool so offline, deleted, and already selected courses are excluded. Add configurable CF request topN plus batch selected-course lookup and related tests.